Fix compile deprecation warnings